--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_API_ENDPOINT=http://localhost:1337/api
-VUE_APP_URL=http://localhost:1337
+VUE_APP_API_ENDPOINT=https://strapifront-wm46.onrender.com/api
+VUE_APP_URL=https://strapifront-wm46.onrender.com
