--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_API_ENDPOINT=https://strapifront-wm46.onrender.com/api
-VUE_APP_URL=https://strapifront-wm46.onrender.com
+VUE_APP_API_ENDPOINT=https://strapi-8uzd.onrender.com/api
+VUE_APP_URL=https://strapi-8uzd.onrender.com
