--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.23",
     "qs": "^6.10.5",
     "querystring": "^0.2.1",
     "vue": "^3.2.13",
